<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBackground"
    android:foreground="@drawable/foreground_border"
    tools:context=".ManuallyAddBudgetHistory">

    <EditText
        android:id="@+id/MADH_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/MADH_amount"
        style="@style/CustomEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/MADH_reason"
        style="@style/CustomEditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/MADH_reason"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MADH_amount" />

    <Button
        android:id="@+id/MADH_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/MADH_save"
        android:onClick="MADH_onSaveButtonClick"
        style="@style/CustomButtonTheme"
        app:layout_constraintEnd_toStartOf="@+id/MADH_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MADH_reason" />

    <Button
        android:id="@+id/MADH_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/MADH_cancel"
        android:onClick="MADH_onCancelButtonClick"
        style="@style/CustomButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MADH_save"
        app:layout_constraintTop_toBottomOf="@+id/MADH_reason" />
</android.support.constraint.ConstraintLayout>